// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TopBar No Token 1`] = `
<div
  id="root"
>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appbar makeStyles-appbar mui-fixed MuiPaper-elevation1"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar MuiToolbar-gutters"
    >
      <div
        class="makeStyles-grow makeStyles-clusterTitle"
      />
      <div
        class="MuiFormControl-root makeStyles-formControl"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-label="Select locale"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            role="button"
            tabindex="0"
          >
            en
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Change theme"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="primary-user-menu"
        aria-haspopup="true"
        aria-label="Account of current user"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeEnd"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar One Cluster 1`] = `
<div
  id="root"
>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appbar makeStyles-appbar mui-fixed MuiPaper-elevation1"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar MuiToolbar-gutters"
    >
      <div
        class="makeStyles-grow makeStyles-clusterTitle"
      />
      <div
        class="MuiFormControl-root makeStyles-formControl"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-label="Select locale"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            role="button"
            tabindex="0"
          >
            en
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Change theme"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="primary-user-menu"
        aria-haspopup="true"
        aria-label="Account of current user"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeEnd"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar Token 1`] = `
<div
  id="root"
>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appbar makeStyles-appbar mui-fixed MuiPaper-elevation1"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar MuiToolbar-gutters"
    >
      <div
        class="makeStyles-grow makeStyles-clusterTitle"
      />
      <div
        class="MuiFormControl-root makeStyles-formControl"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-label="Select locale"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            role="button"
            tabindex="0"
          >
            en
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Change theme"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="primary-user-menu"
        aria-haspopup="true"
        aria-label="Account of current user"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeEnd"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar Two Cluster 1`] = `
<div
  id="root"
>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appbar makeStyles-appbar mui-fixed MuiPaper-elevation1"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar MuiToolbar-gutters"
    >
      <div
        class="makeStyles-grow makeStyles-clusterTitle"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-button MuiButton-containedSizeLarge MuiButton-sizeLarge"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Cluster: ak8s-desktop
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiFormControl-root makeStyles-formControl"
      >
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-label="Select locale"
            class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
            role="button"
            tabindex="0"
          >
            en
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
      <button
        aria-label="Change theme"
        class="MuiButtonBase-root MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        aria-controls="primary-user-menu"
        aria-haspopup="true"
        aria-label="Account of current user"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeEnd"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <span />
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;
